--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
   <br/>
   <img src="./assets/images/birthday.png" width="300"/>
   <hr/>
+      **<h3>Skills & Technologies</h3>** 
+  **<ul>** 
+  **<li>HTML & CSS</li>**  
+  **<li>JavaScript & React</li>**  
+  **<li>Node.js & Express</li>** 
+  **</ul>**  
   <a href="./public/about.html">About Me</a>
   <br/>
   <a href="./public/contact.html">Contact Me</a>
